--- a/Deezer/app/build.gradle
+++ b/Deezer/app/build.gradle
@@ -10,9 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        jackOptions {
-            enabled true
-        }
+
     }
     buildTypes {
         release {
@@ -59,4 +57,5 @@ dependencies {
 
 
 
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 }
