ui playlist screen

--- a/Deezer/app/src/main/AndroidManifest.xml
+++ b/Deezer/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.PlaylistActivity"/>
+        <activity android:name=".view.PlaylistActivity" android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
