--- a/Deezer/app/build.gradle
+++ b/Deezer/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
 
     compile 'com.android.support:recyclerview-v7:25.3.1'
@@ -41,6 +42,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
     compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     compile 'com.facebook.fresco:fresco:1.3.0'
+
 
     compile 'com.squareup.retrofit2:converter-gson:2.2.0'
 
